# slangserver

./: .gitignore  dev.md  pyproject.toml  readme.md
src/: main.py  server.py  serverHandlers.py  slang_util.py
stubs/: pyslang.pyi
test/: module1.sv  module2.sv  module3.v  test.sv
